--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -1,13 +1,20 @@
+.counter-container {
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
 .button-container {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
 }
 
 .reset {
   grid-column: span 2;
   background-color: hsl(10, 100%, 45%);
-  transition: background-color .5s ease;
+  transition: background-color 0.5s ease;
   &:hover {
     background-color: hsl(10, 100%, 30%);
   }
